fix shift tansfer and created form safety

--- a/src/pages/safety/safety.css
+++ b/src/pages/safety/safety.css
@@ -39,7 +39,7 @@
 
 .safetyInformBtn {
 	display: block;
-	margin: 0 auto;
+	margin: 0 auto 30px;
 	text-transform: uppercase;
 	font-family: 'Roboto Mono', monospace;
 	color: var(--cText);
